@@ -77,6 +77,7 @@ Section
 	File "libwinpthread-1.dll"
 	File "zlib1.dll"
 	File "rdadminb.exe"
+	File "rdlogeditb.exe"
 
 	#
 	# Create Shortcuts
@@ -84,24 +85,28 @@ Section
 	SetShellVarContext all
 	createShortCut "$SMPROGRAMS\RDAdmin Remote.lnk" "$INSTDIR\rdadminb.exe"
 
+	SetShellVarContext all
+	createShortCut "$SMPROGRAMS\RDLogEdit Remote.lnk" "$INSTDIR\rdlogeditb.exe"
+	createShortcut "$desktop\RDLogEdit Remote.lnk" "$instdir\rdlogeditb.exe"
+
 	WriteUninstaller $INSTDIR\uninstaller.exe
 SectionEnd
 
 
-Section "RDLibrary Remote"
-	SetOutPath $INSTDIR
-	File "rdlibraryb.exe"
-	SetShellVarContext all
-	createShortCut "$SMPROGRAMS\RDLibrary Remote.lnk" "$INSTDIR\rdlibraryb.exe"
-SectionEnd
+#Section "RDLibrary Remote"
+#	SetOutPath $INSTDIR
+#	File "rdlibraryb.exe"
+#	SetShellVarContext all
+#	createShortCut "$SMPROGRAMS\RDLibrary Remote.lnk" "$INSTDIR\rdlibraryb.exe"
+#SectionEnd
 
 
-Section "RDLogEdit Remote"
-	SetOutPath $INSTDIR
-	File "rdlogeditb.exe"
-	SetShellVarContext all
-	createShortCut "$SMPROGRAMS\RDLogEdit Remote.lnk" "$INSTDIR\rdlogeditb.exe"
-SectionEnd
+#Section "RDLogEdit Remote"
+#	SetOutPath $INSTDIR
+#	File "rdlogeditb.exe"
+#	SetShellVarContext all
+#	createShortCut "$SMPROGRAMS\RDLogEdit Remote.lnk" "$INSTDIR\rdlogeditb.exe"
+#SectionEnd
 
 
 Section "Uninstall"
